--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,15 @@ jwt:
   secret: ASD_DASDB_ASDF_WFE_FWE_JRGN_FVWEVFJB
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/graphql?useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: root
+    url: jdbc:postgresql://localhost/graphql
+    username: postgres
     password: root
-    data: classpath:schema.sql
+    data: classpath:schema/**
     initialization-mode: always
   jpa:
     hibernate:
       ddl-auto: none
+#      ddl-auto: create-drop
       order_inserts: true
       order_updatest: true
       jdbc:
