--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,5 +17,8 @@ spring:
       order_updatest: true
       jdbc:
         batch_size: 4
+    properties:
+      hibernate:
+        default_schema: public
     generate-ddl: true
     show-sql: true
