--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
             <version>5.0.2</version>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java-tools</artifactId>
-            <version>5.2.4</version>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>graphql-spring-boot-starter</artifactId>
+            <version>11.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
