--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.graphql-java</groupId>
+            <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-spring-boot-starter</artifactId>
-            <version>5.0.2</version>
+            <version>11.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
