author as object

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     url: jdbc:postgresql://localhost/graphql
     username: postgres
     password: root
-    data: classpath:schema/**
+    data: classpath:schema/schema.sql
     initialization-mode: always
   jpa:
     hibernate:
